# PWTInstaller

./: .gitignore  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: build_test.yml
src/: InstallData.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Pages/: CustomizePage.cpp  CustomizePage.h  FinishPage.cpp  FinishPage.h  FolderPage.cpp  FolderPage.h  InstallPage.cpp  InstallPage.h  LicensePage.cpp  LicensePage.h  Page.cpp  Page.h  SummaryPage.cpp  SummaryPage.h  WelcomePage.cpp  WelcomePage.h  WinringPage.cpp  WinringPage.h
src/Pages/Include/: DownloadWorker.cpp  DownloadWorker.h  InstallServiceThread.cpp  InstallServiceThread.h  InstallWorker.cpp  InstallWorker.h
src/Resources/: installFiles.qrc  resources.qrc  winringWarn.md
src/Resources/Windows/: win.rc.in
